[package]
name = "interval-map"
version = "0.1.0"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A vector-based, non-duplicate range-keyed, sorted array."
readme = "README.md"
homepage = "https://github.com/kazatsuyu/interval-map"
documentation = "https://github.com/kazatsuyu/interval-map"
repository = "https://github.com/kazatsuyu/interval-map"

[dependencies]
