[package]
name = "interval-map"
version = "0.1.2"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A vector-based, non-duplicate range-keyed, sorted array."
readme = "README.md"
homepage = "https://github.com/kazatsuyu/interval-map"
documentation = "https://kazatsuyu.github.io/interval-map/interval_map/"
repository = "https://github.com/kazatsuyu/interval-map"

[features]
default = []

proc-macro = ["proc-macro2", "quote"]

[dependencies]

proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
